# DragonFruit

./: .gitignore
dragon/: Cargo.toml  README.md
dragon/migrations/20240404000000_initial_schema/: down.sql  up.sql
dragon/src/: lib.rs  main.rs
dragon/src/auth/: jwt.rs  mod.rs  password.rs  totp.rs
dragon/src/crypto/: mod.rs
dragon/src/db/: mod.rs
dragon/src/errors/: mod.rs
dragon/src/handlers/: auth.rs  category.rs  credential.rs  mod.rs
dragon/src/middleware/: auth.rs  cors.rs  mod.rs
dragon/src/models/: category.rs  credential.rs  mod.rs  user.rs
dragon/src/routes/: mod.rs
dragon/src/utils/: time.rs
fruit/: package-lock.json  package.json
fruit/src/: app.html
fruit/src/lib/: types.ts
fruit/src/lib/api/: index.ts
fruit/src/lib/stores/: auth.ts  categories.ts  credentials.ts
fruit/src/routes/: +layout.svelte  +page.svelte
fruit/src/routes/dashboard/: +layout.svelte  +page.svelte
fruit/src/routes/dashboard/categories/: +page.svelte
fruit/src/routes/dashboard/credentials/: +page.svelte
fruit/src/routes/dashboard/credentials/[id]/: +page.svelte
fruit/src/routes/dashboard/credentials/new/: +page.svelte
fruit/src/routes/dashboard/profile/: +page.svelte
fruit/src/routes/login/: +page.svelte
fruit/src/routes/register/: +page.svelte
