[package]
name = "dragon"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["tokio"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
totp-lite = "2.0.1"
tower-http = "0.6.2"
uuid = "1.16.0"
